--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ footer {
 	color: #fff;
 	width: 100vw;
 	height: 425px;
-	background: url(photos/rainbow.JPG) center center / cover no-repeat;
+	background: url(photos/rainbow.jpg) center center / cover no-repeat;
 }
 
 h1 {
