--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,8 @@ h1, h2, h3, h4, h5, p, ul, ol, .ui-block {
 header {
 	color: #fff;
 	width: 100vw;
-	height: 100vh;
+	height: 600px; 
+	height: 88vh;
 	min-height: 400px;
 	background: linear-gradient(0deg, rgba(0,0,0,0.7), transparent 50%), url(photos/turtle.jpg) center center / cover no-repeat;
 }
